--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "antd": "^4.19.1",
     "next": "12.1.0",
+    "papaparse": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-papaparse": "^4.0.2"
+    "react-dropzone": "^12.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
